--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react-error-boundary": "^3.1.4",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
